package org.augur.communicator.messages;

option java_outer_classname = "ExecuteVertexProtos";

message ExecuteVertexMessage {

  required string graphId = 1;

  required string vertexId = 2;
  
  required string udfIdentifier = 3;
  
  message IOKey {
      required int32 typeId = 1;
      required string ioIdentifier = 2;
  }

  repeated IOKey inputs = 4;
  repeated IOKey outputs = 5;
  
}