package org.jdryad.com.messages;

option java_outer_classname = "UpAndLiveProtos";

message UpAndAliveMessage {

  required string identifier = 1;

  required uint64 aliveMillis = 2;
  
}