package org.jdryad.communicator.messages;

option java_outer_classname = "ExecuteVertexStatusProtos";

message ExecuteVertexStatusMessage {

  required string graphId = 1;

  required string vertexId = 2;
  
  required uint32 executionStatus = 3;
  
}